--- a/CookingRecipeT3H/app/src/main/res/layout/fragment_account.xml
+++ b/CookingRecipeT3H/app/src/main/res/layout/fragment_account.xml
@@ -3,10 +3,10 @@
     <RelativeLayout
         xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
         android:layout_height="match_parent">
-    <TextView
-        android:id="@+id/txt_cooking"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Cooking"/>
+        <TextView
+            android:id="@+id/txt_Account"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="Account"/>
     </RelativeLayout>
 </layout>
