(Son) fix fragment home
fix fragment home

--- a/CookingRecipeT3H/app/src/main/res/menu/navigation.xml
+++ b/CookingRecipeT3H/app/src/main/res/menu/navigation.xml
@@ -10,6 +10,6 @@
         android:title="Search"
         android:icon="@drawable/search" />
     <item android:id="@+id/account"
-        android:title="Account"
+        android:title="Me"
         android:icon="@drawable/avatar" />
 </menu>
