--- a/CookingRecipeT3H/app/src/main/res/layout/list_foods.xml
+++ b/CookingRecipeT3H/app/src/main/res/layout/list_foods.xml
@@ -2,77 +2,48 @@
 <layout xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="200dp"
-        android:layout_height="300dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_margin="3dp"
         android:layout_marginTop="5dp"
         android:background="#FFFFFF"
-        android:orientation="vertical">
-
-        <com.example.thanhson.cookingrecipet3h.model.CircleImage
-            android:id="@+id/image_av"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_marginLeft="3dp"
-            android:layout_weight="1.7"
-            android:scaleType="fitXY" />
+        android:orientation="horizontal">
 
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
+            android:layout_weight="4"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content">
+
+            <com.example.thanhson.cookingrecipet3h.model.CircleImage
+                android:id="@+id/image_av"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:layout_marginLeft="3dp"
+                android:scaleType="fitXY" />
+
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="6"
             android:orientation="vertical">
 
             <TextView
                 android:id="@+id/txt_name"
                 android:layout_gravity="center"
-                style=""
-                android:layout_width="wrap_content"
-                android:layout_height="0dp"
-                android:layout_weight="0.3"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:lines="2"
                 android:text="Name"
                 android:textStyle="bold" />
-
-            <LinearLayout
-                android:layout_weight="0.5"
+            <TextView
+                android:id="@+id/txt_nguyenlieu"
+                android:layout_gravity="center"
                 android:layout_width="match_parent"
-                android:orientation="horizontal"
-                android:layout_height="0dp">
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/chef"
-                    android:layout_marginRight="3dp"
-                    />
-                <TextView
-                    android:id="@+id/txt_NguyenLieu"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:lines="2"
-                    android:text="NL" />
-            </LinearLayout>
-            <LinearLayout
-                android:layout_weight="0.5"
-                android:layout_width="match_parent"
-                android:orientation="horizontal"
-                android:gravity="center"
-                android:layout_height="0dp">
-                <TextView
-                    android:id="@+id/txt_time"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:drawableLeft="@drawable/stopwatch"
-                    android:lines="1"
-                    android:text="Time" />
-                <TextView
-                    android:id="@+id/txt_TT"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:drawableLeft="@drawable/flash"
-                    android:lines="1"
-                    android:text="TT" />
-            </LinearLayout>
+                android:layout_height="wrap_content"
+                android:lines="2"
+                android:text="Nguyên Liệu: "
+                android:textStyle="bold" />
 
         </LinearLayout>
     </LinearLayout>
