--- a/CookingRecipeT3H/app/src/main/res/layout/list_foods.xml
+++ b/CookingRecipeT3H/app/src/main/res/layout/list_foods.xml
@@ -10,7 +10,7 @@
         android:orientation="horizontal">
 
         <LinearLayout
-            android:layout_weight="4"
+            android:layout_weight="3"
             android:layout_width="0dp"
             android:layout_height="wrap_content">
 
@@ -33,17 +33,61 @@
                 android:layout_gravity="center"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:lines="2"
                 android:text="Name"
+                style="@android:style/TextAppearance"
                 android:textStyle="bold" />
-            <TextView
-                android:id="@+id/txt_nguyenlieu"
-                android:layout_gravity="center"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:lines="2"
-                android:text="Nguyên Liệu: "
-                android:textStyle="bold" />
+                android:orientation="horizontal"
+                android:layout_marginTop="3dp">
+                <TextView
+                    android:layout_gravity="center"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:lines="2"
+                    android:text="Nguyên Liệu: "
+                    android:textColor="#000000" />
+                <TextView
+                    android:id="@+id/txt_nguyenlieu"
+                    android:layout_gravity="center"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:lines="2"
+                    android:text="Nguyên Liệu: "
+                    android:textColor="#64f5ff"
+                    android:textStyle="bold" />
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_marginTop="10dp"
+                android:layout_marginLeft="20dp">
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/flash"/>
+                <TextView
+                    android:id="@+id/txt_status"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="5dp"
+                    android:textColor="#000000"
+                    android:text="Dễ"/>
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="20dp"
+                    android:src="@drawable/stopwatch"/>
+                <TextView
+                    android:id="@+id/txt_time"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="5dp"
+                    android:textColor="#000000"
+                    android:text="30 phút"/>
+            </LinearLayout>
 
         </LinearLayout>
     </LinearLayout>
