--- a/CookingRecipeT3H/app/src/main/res/layout/activity_main.xml
+++ b/CookingRecipeT3H/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout>
+
     <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
@@ -7,20 +8,35 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="#EEEEEE"
+        android:fitsSystemWindows="true"
         tools:context=".MainActivity">
+
         <include
             android:id="@+id/main"
             layout="@layout/activity_ui"
-            android:layout_height="match_parent"
             android:layout_width="match_parent"
-            />
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:background="@color/colorAccent"
-            android:layout_gravity="start">
+            android:layout_height="match_parent" />
 
-        </LinearLayout>
+        <!--<LinearLayout-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="match_parent"-->
+            <!--android:layout_gravity="start"-->
+            <!--android:background="@color/colorAccent"-->
+            <!--android:orientation="vertical">-->
+
+            <!--<android.support.v7.widget.Toolbar-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="?attr/actionBarSize"-->
+                <!--android:id="@+id/toolbar">-->
+                <!---->
+            <!--</android.support.v7.widget.Toolbar>-->
+        <!--</LinearLayout>-->
+        <android.support.design.widget.NavigationView
+            android:id="@+id/nav_menu_view"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_gravity="start"
+            app:headerLayout="@layout/nav_header"
+            app:menu="@menu/drawer_menu" />
     </android.support.v4.widget.DrawerLayout>
 </layout>
