--- a/CookingRecipeT3H/app/src/main/res/layout/activity_detail.xml
+++ b/CookingRecipeT3H/app/src/main/res/layout/activity_detail.xml
@@ -8,13 +8,17 @@
         <ImageView
             android:id="@+id/txt_imFood"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="200dp"
+            android:src="@drawable/image1"
             />
-        <TableLayout
+        <android.support.design.widget.TabLayout
             android:id="@+id/layout"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
-        </TableLayout>
+            android:layout_height="?attr/actionBarSize"
+            android:layout_alignParentTop="true"
+            android:background="#07cab4"
+            >
+        </android.support.design.widget.TabLayout>
         <android.support.v4.view.ViewPager
             android:id="@+id/viewPager"
             android:layout_width="match_parent"
