--- a/CookingRecipeT3H/app/src/main/res/values/colors.xml
+++ b/CookingRecipeT3H/app/src/main/res/values/colors.xml
@@ -3,4 +3,8 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+    <color name="colorWhite">#ffffff</color>
+    <color name="colorBlack">#000000</color>
+    <color name="colorGray">#8d8c8c</color>
+    <color name="colorOrange">#f27b26</color>
 </resources>
