--- a/CookingRecipeT3H/app/src/main/java/com/example/thanhson/cookingrecipet3h/widget/layout/fragment_resources.xml
+++ b/CookingRecipeT3H/app/src/main/java/com/example/thanhson/cookingrecipet3h/widget/layout/fragment_resources.xml
@@ -4,12 +4,8 @@
         xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
         android:layout_height="match_parent">
         <TextView
-            android:id="@+id/txt_describe"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="20dp"
-            android:layout_marginHorizontal="10dp"
-            android:textColor="@android:color/black"
-            android:text="Describe"/>
+            android:text="Resouces"/>
     </LinearLayout>
 </layout>
