--- a/CookingRecipeT3H/app/src/main/res/layout/fragment_home.xml
+++ b/CookingRecipeT3H/app/src/main/res/layout/fragment_home.xml
@@ -77,8 +77,7 @@
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/lv_foodHF"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="60dp">
+                android:layout_height="wrap_content">
             </android.support.v7.widget.RecyclerView>
         </LinearLayout>
     </ScrollView>
