--- a/CookingRecipeT3H/app/src/main/res/layout/fragment_cooking.xml
+++ b/CookingRecipeT3H/app/src/main/res/layout/fragment_cooking.xml
@@ -1,12 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout>
-    <RelativeLayout
-        xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-        android:layout_height="match_parent">
-    <TextView
-        android:id="@+id/txt_cooking"
+    <LinearLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Cooking"/>
-    </RelativeLayout>
+        android:orientation="vertical"
+        android:gravity="center">
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/cookings"/>
+        <TextView
+            android:id="@+id/txt_cooking"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="20dp"
+            android:text="Chưa có món nào được thực hiện"/>
+    </LinearLayout>
 </layout>
