--- a/CookingRecipeT3H/app/src/main/res/layout/fragment_menu_search.xml
+++ b/CookingRecipeT3H/app/src/main/res/layout/fragment_menu_search.xml
@@ -4,7 +4,9 @@
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="10dp">
+        android:layout_margin="10dp"
+        android:padding="20dp"
+        android:background="@color/colorWhite">
 
         <Button
             android:id="@+id/btn_thucdon1"
@@ -12,8 +14,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_margin="10dp"
-            android:background="@drawable/btn_background"
-            android:text="Thực đơn 1" />
+            android:background="@drawable/btn_background" />
 
         <Button
             android:id="@+id/btn_thucdon2"
@@ -54,6 +55,40 @@
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:layout_below="@+id/btn_thucdon4"
+            android:layout_margin="10dp"
+            android:background="@drawable/btn_background" />
+
+        <Button
+            android:id="@+id/btn_thucdon7"
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/btn_thucdon5"
+            android:layout_margin="10dp"
+            android:background="@drawable/btn_background" />
+
+        <Button
+            android:id="@+id/btn_thucdon8"
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_below="@+id/btn_thucdon6"
+            android:layout_margin="10dp"
+            android:background="@drawable/btn_background" />
+
+        <Button
+            android:id="@+id/btn_thucdon9"
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/btn_thucdon7"
+            android:layout_margin="10dp"
+            android:background="@drawable/btn_background" />
+
+        <Button
+            android:id="@+id/btn_thucdon10"
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_below="@+id/btn_thucdon8"
             android:layout_margin="10dp"
             android:background="@drawable/btn_background" />
     </RelativeLayout>
