--- a/CookingRecipeT3H/app/src/main/res/layout/activity_detail.xml
+++ b/CookingRecipeT3H/app/src/main/res/layout/activity_detail.xml
@@ -146,24 +146,31 @@
                     android:layout_width="match_parent"
                     android:layout_height="?attr/actionBarSize"
                     app:layout_collapseMode="pin">
-
-                    <ImageView
-                        android:layout_width="wrap_content"
+                    <LinearLayout
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:src="@drawable/ic_arrow_left"
-                        android:tint="@color/colorAccent" />
+                        android:orientation="horizontal">
+                        <ImageView
+                            android:id="@+id/im_back"
+                            android:layout_weight="1"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:src="@drawable/arrow_back"
+                            android:layout_gravity="center"/>
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="TITLE"
-                        android:textColor="@color/colorAccent"
-                        android:textSize="20sp" />
-
-                    <ImageView
-                        android:src="@drawable/ic_alarm_black_24dp"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" />
+                        <TextView
+                            android:layout_weight="3"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Chi Tiết"
+                            android:textColor="@color/colorBlack"
+                            android:textSize="20sp" />
+                        <ImageView
+                            android:layout_weight="1"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:src="@drawable/ic_alarm_black_24dp" />
+                    </LinearLayout>
                 </android.support.v7.widget.Toolbar>
 
             </android.support.design.widget.CollapsingToolbarLayout>
